#46 fix : loader z-index add

--- a/src/app/components/@shared/loader/Loader.module.scss
+++ b/src/app/components/@shared/loader/Loader.module.scss
@@ -8,4 +8,5 @@
   background-color: white;
   left: 0;
   top: 0;
+  z-index: 10;
 }
